# StateReportable

./: CMakeLists.txt
cmake/: projecthelper.cmake
src/StateReportable/: CMakeLists.txt  Dispatcher.h  ReportLine.cpp  ReportLine.h  ReporterToFile.cpp  ReporterToFile.h  State.h  StateBase.h  StateToFile.cpp  StateToFile.h  StateToFileConfig.cpp  StateToFileConfig.h  StateToFileConfigReader.cpp  TemplateHelpers.h  demo.cpp  split.cpp  split.h
src/StateReportable/core/: Dispatcher.cpp  Dispatcher.h  DispatcherImplementation.h  ReportLine.cpp  ReportLine.h  StatLine.cpp  StatLine.h  StateBase.h  TestDestination.cpp  TestDestination.h  VectorHelpers.h  calcStat.cpp  calcStat.h  split.cpp  split.h
src/StateReportable/toFile/: ConfigReader.cpp  ConfigReader.h  Reporter.cpp  Reporter.h  State.h  demo.cpp  statMaker.cpp
src/tests/: CMakeLists.txt  ReportLineTest.cpp  main.h
src/tests/DispatcherTest/: DispatcherTest.cpp
src/tests/DispatcherWeakSingletonTest/: DispatcherWeakSingletonTest.cpp
src/tests/ReportLineTest/: ReportLineTest.cpp
src/tests/StatLineTest/: StatLineTest.cpp
src/tests/StateBaseTest/: StateBaseTest.cpp
src/tests/StateTest/: StateTest.cpp
src/tests/StateToFileConfigReaderTest/: StateToFileConfigReaderTest.cpp
src/tests/StateToFileConfigTest/: StateToFileConfigTest.cpp
src/tests/ThreadSyncConceptTest/: ThreadSyncConceptTest.cpp
src/tests/calcStatTest/: calcStatTest.cpp
src/tests/splitTest/: splitTest.cpp
